pretest and posttest added | content alignment fixed

--- a/Measurement-of-Numerical-Aperture-of-Optical-Fiber/experiment/css/style.css
+++ b/Measurement-of-Numerical-Aperture-of-Optical-Fiber/experiment/css/style.css
@@ -12,6 +12,7 @@ body {
   /* Standard syntax */
   background-color: aliceblue;
   width: 1200px;
+  margin: 2px auto;
 }
 
 #header-nav {
